--- a/ipadcats/ipadcats.entitlements
+++ b/ipadcats/ipadcats.entitlements
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+	<string>$(TeamIdentifierPrefix)uk.co.enyapkcin.ipadcats.favoriteskvs</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.uk.co.enyapkcin.ipadcats</string>
