firebase analytics and some usage only tracking

--- a/ipadcats.xcodeproj/xcshareddata/xcschemes/ipadcats.xcscheme
+++ b/ipadcats.xcodeproj/xcshareddata/xcschemes/ipadcats.xcscheme
@@ -60,6 +60,12 @@
             ReferencedContainer = "container:ipadcats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
