--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,8 +29,7 @@ jobs:
         run: |
           xcodebuild docbuild -scheme ipadcats \
             -derivedDataPath /tmp/docbuild \
-            -destination 'generic/platform=iOS' \
-            -allowProvisioningUpdates;
+            -destination 'generic/platform=iOS';
           $(xcrun --find docc) process-archive \
             transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-iphoneos/ipadcats.doccarchive \
             --hosting-base-path ipadcats \
