--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -34,7 +34,7 @@ jobs:
             transform-for-static-hosting /tmp/docbuild/Build/Products/Debug-iphoneos/ipadcats.doccarchive \
             --hosting-base-path ipadcats \
             --output-path docs;
-          echo "<script>window.location.href += \"/documentation/ipadcats\"</script>" > docs/index.html;
+          echo "<script>window.location.href += \"/CatCodes/documentation/ipadcats\"</script>" > docs/index.html;
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
